<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/holo_blue_bright"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_assignment_turned_in_white_36dp"
        />
    <TextView
        android:id="@+id/answer_text"
        android:text="@string/Answer_text"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="29dp"
        >

        <Button
            android:id="@+id/True_Button"
            android:text="@string/True_Button_text"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/False_Button"
            android:text="@string/False_Button_text"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"

        >
        <ImageButton
            android:id="@+id/Prev_button"
            android:contentDescription="@string/Prev_text"
            android:src="@drawable/baseline_navigate_before_white_18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            />
    <ImageButton
        android:id="@+id/Next_button"
        android:contentDescription="@string/Next_text"
        android:src="@drawable/baseline_navigate_next_white_18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        />
    </LinearLayout>

    </LinearLayout>